[package]
name = "omarchy-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
shellexpand = "3.1"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "omado"
path = "src/main.rs"